--- a/.config/waybar/themes/line/style-line.css
+++ b/.config/waybar/themes/line/style-line.css
@@ -19,7 +19,7 @@ tooltip {
     color:@color9;
 }
 #custom-notification {
-    padding: 0px 5px 0 10;
+    padding: 0px 5px 0 10px;
     transition: all .3s ease;
     color:@color7;
 }
@@ -86,7 +86,7 @@ tooltip {
 
 }
 #battery{
-    padding: 0px 10px 0 5;
+    padding: 0px 10px 0 5px;
     transition: all .3s ease;
     color:@color7;
     background: transparent;
