--- a/.config/waybar/themes/default/style-default.css
+++ b/.config/waybar/themes/default/style-default.css
@@ -9,21 +9,21 @@ window#waybar{
 }
 .modules-left {
     padding:7px;
-    margin:10 0 5 10;
+    margin:10px 0 5px 10px;
     border-radius:10px;
     background: alpha(@background,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 .modules-center {
     padding:7px;
-    margin:10 0 5 0;
+    margin:10px 0 5px 0;
     border-radius:10px;
     background: alpha(@background,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 .modules-right {
     padding:7px;
-    margin: 10 10 5 0;
+    margin:10px 10px 5px 0;
     border-radius:10px;
     background: alpha(@background,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
