--- a/.config/waybar/themes/zen/style-zen.css
+++ b/.config/waybar/themes/zen/style-zen.css
@@ -9,7 +9,7 @@ window#waybar{
 }
 .modules-center {
     padding:7px;
-    margin:10 0 5 0;
+    margin:10px 0 5px 0;
     border-radius:10px;
     background: alpha(@background,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
